Cherry-pick a6ab20ed7b64. rdar://problem/113602829

WebXR: Content is not loading in Private Browsing
    https://bugs.webkit.org/show_bug.cgi?id=259462
    rdar://108818635

    Reviewed by Tim Horton and Mike Wyrzykowski.

    The sandbox on iOS Private Browsing blocks WebXR from accessing its
    cache directory on visionOS. Specifically add those directories
    to the sandbox extension.

    * Source/WebKit/Shared/WebProcessCreationParameters.h:
    * Source/WebKit/Shared/WebProcessCreationParameters.serialization.in:
    * Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
    * Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:

    Canonical link: https://commits.webkit.org/266346@main

Canonical link: https://commits.webkit.org/265870.249@safari-7616-branch